# esp32s3_rgb_lcd_lvgl

./: .gitignore
pics/: IMG_6884.HEIC  IMG_6885.HEIC
scripts/: compile.sh  size.sh
src/common/driver/driver_api/: CMakeLists.txt  driver_api.c
src/common/driver/driver_api/include/: driver_api.h
src/common/driver/driver_chipinfo/: CMakeLists.txt
src/common/driver/driver_lcd/: CMakeLists.txt  driver_lcd.backup  driver_lcd.c
src/common/driver/driver_lcd/include/: driver_lcd.h
src/common/driver/driver_openweather/: CMakeLists.txt  driver_openweather.c
src/common/driver/driver_openweather/include/: driver_openweather.h
src/common/driver/driver_spiffs/: driver_spiffs.c
src/common/driver/driver_wifi/: CMakeLists.txt  driver_wifi.c
src/common/driver/driver_wifi/include/: driver_wifi.h
src/common/module/module_api/: CMakeLists.txt  module_api.c
src/common/module/module_api/include/: module_api.h
src/common/module/module_lcd/: CMakeLists.txt  module_lcd.c
src/common/module/module_lcd/include/: module_lcd.h
src/common/module/module_openweather/: CMakeLists.txt  module_openweather.c
src/common/module/module_openweather/include/: module_openweather.h
src/common/module/module_wifi/: CMakeLists.txt  module_wifi.c
src/common/module/module_wifi/include/: module_wifi.h
src/common/others/defines/include/: define_common_data_types.h  define_rtos_globals.h  define_rtos_tasks.h
src/common/util/util_dataqueue/: CMakeLists.txt  util_dataqueue.c
src/common/util/util_dataqueue/include/: util_dataqueue.h
src/projects/mainapp/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/projects/mainapp/main/: CMakeLists.txt  Kconfig  main.c
src/projects/mainapp/project_ui/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info
src/projects/mainapp/project_ui/assets/fonts/: ui_font_fontinter20.fcfg  ui_font_fontinter30.c  ui_font_fontinter30.fcfg
src/projects/mainapp/project_ui/export/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_font_fontinter120.c  ui_helpers.h  ui_img_images_button_green_png.c  ui_img_images_button_red_png.c  ui_img_images_humidity1_png.c  ui_img_images_location_png.c  ui_img_images_temperature1_png.c  ui_screen1.c  ui_screen1.h
src/projects/test_lcd/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/projects/test_lcd/main/: CMakeLists.txt  idf_component.yml  main.c
src/projects/test_lcd/project_ui/: CMakeLists.txt
src/projects/test_lcd_squareline/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/projects/test_lcd_squareline/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c
src/projects/test_lcd_squareline/project_defines/include/: project_defines.h
src/projects/test_lcd_squareline/project_ui/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info  project_ui.c
src/projects/test_lcd_squareline/project_ui/assets/fonts/: ui_font_FontRoboto80.c  ui_font_FontRoboto80.fcfg  ui_font_FontRobotoBold120.c  ui_font_FontRobotoBold120.fcfg  ui_font_fontinter120.fcfg
src/projects/test_lcd_squareline/project_ui/export/ui/: CMakeLists.txt  filelist.txt  ui.h  ui_font_FontRoboto80.c  ui_font_fontinter20.c  ui_helpers.c  ui_screen1.c  ui_screen1.h
src/projects/test_lcd_squareline/squareline_project_test_lcd/: squareline_project_test_lcd.sll  squareline_project_test_lcd.spj
src/projects/test_lcd_squareline/squareline_project_test_lcd/export/ui/: CMakeLists.txt  ui.c
src/projects/test_openweather/: CMakeLists.txt  sdkconfig
src/projects/test_openweather/main/: CMakeLists.txt  main.c
src/projects/test_wifi/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/projects/test_wifi/main/: CMakeLists.txt  main.c
src/projects/test_wifi/project_defines/include/: project_defines.h
src/spiffs_fs/: hw_info.txt
