idf_component_register(SRCS 
                         "driver_lcd.c"
                       INCLUDE_DIRS
                         "include"
                       PRIV_REQUIRES
                            lvgl__lvgl
                            esp_lcd
                            esp_timer
                            esp_common
                            defines
                            bsp
                       REQUIRES
                            util_dataqueue
)
