idf_component_register(SRCS 
                         "driver_lcd.c"
                       INCLUDE_DIRS
                         "include"
                       PRIV_REQUIRES
                            esp_lcd
                            lvgl__lvgl
                            esp_common
                            defines
                            bsp
                       REQUIRES
                            util_dataqueue
)